--- a/Curriculo.html
+++ b/Curriculo.html
@@ -1,68 +1,113 @@
 <!DOCTYPE html>
+<html lang-"en">
 
 <head>
 
 </head>
 
+<title>Curriculo</title>
+
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device.width, initial-scale=1.0" />
+
+<link rel="stylessheet" href="index.css" />
+
 <body>
 
-    <h1>Michael Ronan Sampaio Freitas – Professional Translator</h1>
+        <h1>Michael Ronan Sampaio Freitas – Professional Translator</h1>
 
-    <hr />
+        <hr />
 
-    <p>+55 21 99485-8214</p>
+        <p>+55 21 99485-8214</p>
 
-    <p>tradsampaio@gmail.com</p>
+        <p>tradsampaio@gmail.com</p>
 
-    <img src="https://lh3.googleusercontent.com/ogw/ADea4I76plutgthBdIWG7WEGUX1LZfLw_473yfzWq_uLUQ=s83-c-mo" />
+        <img src="https://lh3.googleusercontent.com/ogw/ADea4I76plutgthBdIWG7WEGUX1LZfLw_473yfzWq_uLUQ=s83-c-mo" />
 
-    <hr />
+        <hr />
 
-    <h2>Skills</h2>
+    <div>
 
-    <p>• Professional translator english > brazilian Portuguese</p>
+        <h2>Skills</h2>
 
-    <p>• Practice with CAT Tools, SDL Studio (Trados), MemoQ, Wordfast</p>
+        <ul>
 
-    <p>• Practice and Mastery with MS Office</p>
+            <li>Professional translator English > Brazilian Portuguese</li>
 
-    <h2>Professional Experience</h2>
+            <li>Practice with CAT Tools, SDL Studio (Trados), MemoQ, Wordfast</li>
 
-    <h3>General Translation:</h3>
+            <li>Practice and Mastery with MS Office</li>
 
-    <p>• Electronic Games</p>
+        </ul>
 
-    <p>• Tabletop RPG Materials</p>
+    </div>
 
-    <p>• E-commerce Product Description</p>
+    <div>
 
-    <h3>Information Technology:</h3>
+        <h2>Professional Experience</h2>
 
-    <p>• Terms of Commitment</p>
+        <h3>General Translation:</h3>
 
-    <p>• Privacy Policies</p>
+        <ul>
 
-    <p>• User Manuals</p>
+            <li>Electronic Games</li>
 
-    <h3>Educational:</h3>
+            <li>Tabletop RPG Materials</li>
 
-    <p>• Video Lessons Subtitles</p>
+            <li>E-commerce Product Description</li>
 
-    <p>• Pedagogical Reports</p>
+        </ul>
 
-    <h2>Academic Education</h2>
+        <h3>Information Technology:</h3>
 
-    <h4>CENTRO UNIVERSITÁRIO SERRA DOS ORGÃOS | 2014 – 2017</h4>
+        <ul>
 
-    <p>• Bachelor of General Biology</p>
+            <li>Terms of Commitment</li>
 
-    <h4>FUNDAÇÃO BRADESCO | 2019</h4>
+            <li>Privacy Policies</li>
 
-    <p>• Technical Course in Professional Posture and Development</p>
+            <li>User Manuals</li>
 
-    <h2>Additional Information</h2>
+        </ul>
 
-    <p>Voluntarily translates since 2016 and works as a freelance professional translator since 2018.</p>
+        <h3>Educational:</h3>
+
+        <ul>
+
+            <li>Video Lessons Subtitles</li>
+
+            <li>Pedagogical Reports</li>
+
+        </ul>
+
+    </div>
+
+    <div>
+
+        <h2>Academic Education</h2>
+
+        <ul>
+
+            <h4>CENTRO UNIVERSITARIO SERRA DOS ORGAOS | 2014 – 2017</h4>
+
+            <li>Bachelor of General Biology</li>
+
+            <h4>FUNDACAO BRADESCO | 2019</h4>
+
+            <li>Technical Course in Professional Posture and Development</li>
+
+        </ul>
+
+    </div>
+
+    <div>
+
+        <h2>Additional Information</h2>
+
+            <p>Voluntarily translates since 2016 and works as a freelance professional translator since 2018.</p>
+
+    </div>
 
 </body>
 
